WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201495
[JSC] Do not use FTLOutput::weakPointer directly
https://bugs.webkit.org/show_bug.cgi?id=201495
Summary
[JSC] Do not use FTLOutput::weakPointer directly
Yusuke Suzuki
Reported
2019-09-04 23:56:19 PDT
[JSC] Do not use FTLOutput::weakPointer directly
Attachments
Patch
(4.42 KB, patch)
2019-09-05 00:00 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2019-09-05 00:00:23 PDT
Created
attachment 378051
[details]
Patch
Yusuke Suzuki
Comment 2
2019-09-05 00:01:21 PDT
Comment on
attachment 378051
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=378051&action=review
> Source/JavaScriptCore/ChangeLog:12 > + For FrozenValue, we should use frozenPointer helper function.
Note that DFG implementation of CreatePromise/NewPromise are using DFGSpeculativeJIT::TrustedImmPtr::weakPointer correctly. And I checked NewPromise and it was OK.
Yusuke Suzuki
Comment 3
2019-09-05 00:02:15 PDT
<
rdar://problem/55055463
>
Yusuke Suzuki
Comment 4
2019-09-05 00:09:40 PDT
Ensures this patch fixes the debug assertion in jsc-stress-tests.
https://build.webkit.org/builders/Apple%20High%20Sierra%20Debug%20JSC%20%28Tests%29/builds/3589
Filip Pizlo
Comment 5
2019-09-05 08:08:15 PDT
Comment on
attachment 378051
[details]
Patch Can you do a follow-up that renames FTL::Output::weakPointer so that folks don't make the same mistake? Maybe Output::alreadyRegisteredWeakPointer or something that makes it clear what the assumptions are.
WebKit Commit Bot
Comment 6
2019-09-05 08:51:53 PDT
Comment on
attachment 378051
[details]
Patch Clearing flags on attachment: 378051 Committed
r249530
: <
https://trac.webkit.org/changeset/249530
>
WebKit Commit Bot
Comment 7
2019-09-05 08:51:54 PDT
All reviewed patches have been landed. Closing bug.
Yusuke Suzuki
Comment 8
2019-09-05 11:14:44 PDT
(In reply to Filip Pizlo from
comment #5
)
> Comment on
attachment 378051
[details]
> Patch > > Can you do a follow-up that renames FTL::Output::weakPointer so that folks > don't make the same mistake? Maybe Output::alreadyRegisteredWeakPointer or > something that makes it clear what the assumptions are.
Sounds nice! I'll change this.
Yusuke Suzuki
Comment 9
2019-09-05 16:21:27 PDT
Committed
r249552
: <
https://trac.webkit.org/changeset/249552
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug