[JSC] Do not use FTLOutput::weakPointer directly https://bugs.webkit.org/show_bug.cgi?id=201495

Reviewed by Filip Pizlo.

JSTests:

* stress/create-promise-weak-pointer.js: Added.
(foo):

Source/JavaScriptCore:

FTLOutput::weakPointer does not register the cell as a weak pointer.
CreatePromise's implementation is accidentally using m_out.weakPointer and hits the debug assertion.
While the current implementation is not posing correctness issue since these cells are live so long as JSGlobalObject is live,
and we register JSGlobalObject as a weakPointer, we should always use FTLLowerDFGToB3's helper function.
For FrozenValue, we should use frozenPointer helper function.

* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileCreatePromise):
(JSC::FTL::DFG::LowerDFGToB3::compileNewArrayBuffer):


Canonical link: https://commits.webkit.org/215134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249530 268f45cc-cd09-0410-ab3c-d52691b4dbfc